--- a/index.src.html
+++ b/index.src.html
@@ -54,6 +54,7 @@ spec: html; urlPrefix: https://html.spec.whatwg.org/multipage/;
         type: dfn; text: entry settings object; url: webappapis.html#entry-settings-object
     for: media;
         type: dfn; text: current playback position; url: media.html#current-playback-position
+        type: dfn; text: intrinsic width; url: media.html#concept-video-intrinsic-width
     type: dfn; text: live; url: infrastructure.html#live
 
 spec: mediacapture-streams; urlPrefix: https://www.w3.org/TR/mediacapture-streams/
@@ -478,6 +479,8 @@ Internal Slots {#videodecoder-internal-slots}
 <dl>
 <dt><dfn attribute for=VideoDecoder>[[codec implementation]]</dfn></dt>
 <dd>Underlying decoder implementation provided by the User Agent.</dd>
+<dt><dfn attribute for=VideoDecoder>[[active decoder config]]</dfn></dt>
+<dd>The {{VideoDecoderConfig}} that is actively applied.</dd>
 <dt><dfn attribute for=VideoDecoder>[[output callback]]</dfn></dt>
 <dd>Callback given at construction for decoded outputs.</dd>
 <dt><dfn attribute for=VideoDecoder>[[error callback]]</dfn></dt>
@@ -539,7 +542,8 @@ Methods {#videodecoder-methods}
         {{VideoDecoder/[[codec implementation]]}} with an implementation
         supporting |config|.
     3. Otherwise, run the <a>Close VideoDecoder</a> algorithm with
-        {{NotSupportedError}}.
+        {{NotSupportedError}} and abort these steps.
+    4. Set {{VideoDecoder/[[active decoder config]]}} to `config`.
   </dd>
 
   <dt><dfn method for=VideoDecoder>decode(chunk)</dfn></dt>
@@ -653,12 +657,17 @@ Algorithms {#videodecoder-algorithms}
         1. Let |timestamp| and |duration| be the
             {{EncodedVideoChunk/timestamp}} and {{EncodedVideoChunk/duration}}
             from the {{EncodedVideoChunk}} associated with |output|.
-        2. Let |frame| be the result of running the [=Create a VideoFrame=]
-            algorithm with |output|, |timestamp|, and |duration|.
-        3. Invoke {{VideoDecoder/[[output callback]]}} with |frame|.
+        2. Let |displayAspectWidth| and |displayAspectHeight| be the
+            {{VideoDecoderConfig/displayAspectWidth}} and
+            {{VideoDecoderConfig/displayAspectHeight}} of the
+            {{VideoDecoder/[[active decoder config]]}} respectively.
+        3. Let |frame| be the result of running the [=Create a VideoFrame=]
+            algorithm with |output|, |timestamp|, |duration|, |displayAspectWidth|
+            and |displayAspectHeight|.
+        4. Invoke {{VideoDecoder/[[output callback]]}} with |frame|.
   </dd>
   <dt>
-    <dfn>Create a VideoFrame</dfn> (with |output|, |timestamp|, and |duration|)
+    <dfn>Create a VideoFrame</dfn> (with |output|, |timestamp|, |duration|, |displayAspectWidth|, and |displayAspectHeight|)
   </dt>
   <dd>
     1. Let |planes| be a sequence of {{Plane}}s containing the decoded
@@ -678,7 +687,14 @@ Algorithms {#videodecoder-algorithms}
             {{VideoFramePlaneInit/cropHeight}}
             be the crop region of the decoded video frame |output| in
             pixels, prior to any aspect ratio adjustments.
-        5. Let {{VideoFramePlaneInit/displayWidth}} and
+        5. If |displayAspectWidth| and |displayAspectWidth| are provided,
+            assign the value of the decoded video frame in pixel to either
+            {{VideoFramePlaneInit/displayWidth}} or
+            {{VideoFramePlaneInit/displayHeight}}, and scale up the other
+            dimension to match the ratio of |displayAspectWidth| and
+            |displayAspectHeight|, as described in
+            [=intrinsic width|HTMLVideoElement=].
+        6. Otherwise, let {{VideoFramePlaneInit/displayWidth}} and
             {{VideoFramePlaneInit/displayHeight}} be the display size of
             the decoded video frame in pixels.
     4. Return a new {{VideoFrame}}, constructed with |pixelFormat|,
@@ -1424,8 +1440,8 @@ dictionary VideoDecoderConfig {
   BufferSource description;
   unsigned long codedWidth;
   unsigned long codedHeight;
-  unsigned long displayWidth;
-  unsigned long displayHeight;
+  unsigned long displayAspectWidth;
+  unsigned long displayAspectHeight;
   HardwareAcceleration hardwareAcceleration = "allow";
 };
 </xmp>
@@ -1436,13 +1452,9 @@ run these steps:
     `false`.
 2. If {{VideoDecoderConfig/codedWidth}} = 0 or
     {{VideoDecoderConfig/codedHeight}} = 0, return `false`.
-3. If {{VideoDecoderConfig/displayWidth}} = 0 or
-    {{VideoDecoderConfig/displayHeight}} = 0, return `false`.
+3. If {{VideoDecoderConfig/displayAspectWidth}} = 0 or
+    {{VideoDecoderConfig/displayAspectWidth}} = 0, return `false`.
 4. Return `true`.
-
-NOTE: A user agent may also reject a config whose {{VideoDecoderConfig/codedWidth}}
-  or {{VideoDecoderConfig/codedHeight}} exceeds reasonnable bounds, determined by
-  which {{VideoDecoder/[[codec implementation]]}} are available to the user agent.
 
 <dl>
   <dt><dfn dict-member for=VideoDecoderConfig>codec</dfn></dt>
@@ -1472,17 +1484,21 @@ NOTE: A user agent may also reject a config whose {{VideoDecoderConfig/codedWidt
   NOTE: {{VideoDecoderConfig/codedWidth}} and {{VideoDecoderConfig/codedHeight}}
     are only used as hints when selecting a {{VideoDecoder/[[codec implementation]]}}.
 
-  <dt><dfn dict-member for=VideoDecoderConfig>displayWidth</dfn></dt>
+  <dt><dfn dict-member for=VideoDecoderConfig>displayAspectWidth</dfn></dt>
   <dd>
-    Width of the VideoFrame when displayed. Defaults to {{VideoFrame/cropWidth}}
-    if not present.
+    Width of the VideoFrame's aspect ratio when displayed.
   </dd>
 
-  <dt><dfn dict-member for=VideoDecoderConfig>displayHeight</dfn></dt>
+  <dt><dfn dict-member for=VideoDecoderConfig>displayAspectHeight</dfn></dt>
   <dd>
-    Height of the VideoFrame when displayed. Defaults to {{VideoFrame/cropHeight}}
-    if not present.
+    Height of the VideoFrame's aspect ratio when displayed.
   </dd>
+
+NOTE: User agents are expected to scale up a {{VideoFrame|VideoFrame's}} {{VideoFrame/displayWidth}} or
+ {{VideoFrame/displayHeight}} to match the ratio of
+ {{VideoDecoderConfig/displayAspectWidth}} and
+ {{VideoDecoderConfig/displayAspectHeight}}, as defined in the
+ [=intrinsic width|HTMLVideoElement=] spec.
 
   <dt><dfn dict-member for=VideoDecoderConfig>hardwareAcceleration</dfn></dt>
   <dd>
