Update VideoDecoderConfig notes

--- a/index.src.html
+++ b/index.src.html
@@ -1482,7 +1482,7 @@ run these steps:
   </dd>
 
   NOTE: {{VideoDecoderConfig/codedWidth}} and {{VideoDecoderConfig/codedHeight}}
-    are only used as hints when selecting a {{VideoDecoder/[[codec implementation]]}}.
+    are used as hints when selecting a {{VideoDecoder/[[codec implementation]]}}.
 
   <dt><dfn dict-member for=VideoDecoderConfig>displayAspectWidth</dfn></dt>
   <dd>
@@ -1497,8 +1497,8 @@ run these steps:
 Note: {{VideoFrame/displayWidth}} and {{VideoFrame/displayHeight}} can both be
   different from {{VideoDecoderConfig/displayAspectWidth}} and
   {{VideoDecoderConfig/displayAspectHeight}}, but they should have identical
-  ratios, after being scaled according to defintions of
-  [=intrinsic width|intrinsic size=].
+  ratios, after scaling is applied when
+  [=create a videoframe|creating the video frame=].
 
   <dt><dfn dict-member for=VideoDecoderConfig>hardwareAcceleration</dfn></dt>
   <dd>
