Tiny grammar fixes.

--- a/index.src.html
+++ b/index.src.html
@@ -127,7 +127,7 @@ Definitions {#definitions}
     immediately when no longer in use.
 
 : <dfn>Temporal Layer</dfn>
-:: A grouping of {{EncodedVideoChunk}}s who's timestamp cadence produces a
+:: A grouping of {{EncodedVideoChunk}}s whose timestamp cadence produces a
     particular framerate. See {{VideoEncoderConfig/scalabilityMode}}.
 
 : <dfn>Progressive Image</dfn>
@@ -1317,7 +1317,7 @@ dictionary EncodedVideoChunkMetadata {
     {{EncodedVideoChunk}}.
 
 : <dfn dict-member for=EncodedVideoChunkMetadata>temporalLayerId</dfn>
-:: A number that identifying the [=temporal layer=] for the associated
+:: A number that identifies the [=temporal layer=] for the associated
     {{EncodedVideoChunk}}.
 
 
@@ -1685,7 +1685,7 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
     The encoded width of output {{EncodedVideoChunk}}s in pixels, prior to any
     display aspect ratio adjustments.
 
-    The encoder must scale any {{VideoFrame}} who's
+    The encoder must scale any {{VideoFrame}} whose
     {{VideoFrame/[[crop width]]}} differs from this value.
   </dd>
 
@@ -1694,7 +1694,7 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
     The encoded height of output {{EncodedVideoChunk}}s in pixels, prior to any
     display aspect ratio adjustments.
 
-    The encoder must scale any {{VideoFrame}} who's
+    The encoder must scale any {{VideoFrame}} whose
     {{VideoFrame/[[crop height]]}} differs from this value.
   </dd>
 </dl>
@@ -2022,7 +2022,7 @@ The {{AudioData}} {{AudioData/[[resource reference]]}} and {{VideoFrame}}
 [=media resource=].
 
 {{VideoFrame}}.{{VideoFrame/clone()}} and
-{{AudioData}}.{{AudioData/clone()}} return new frame objects who's
+{{AudioData}}.{{AudioData/clone()}} return new frame objects whose
 `[[resource reference]]` points to the same [=media resource=] as the original
 frame.
 
@@ -3237,7 +3237,7 @@ interface ImageDecoder {
     6. Wait for any of the following conditions to be true (whichever happens
         first):
         1. {{ImageDecoder/[[encoded data]]}} contains enough bytes to decode
-            |encodedFrame| to produce an output who's [=Progressive Image
+            |encodedFrame| to produce an output whose [=Progressive Image
             Frame Generation=] exceeds |lastFrameGeneration|.
         2. {{ImageDecoder/[[encoded data]]}} is found to be malformed.
         3. {{ImageDecoder/complete}} is `true`.
@@ -3246,7 +3246,7 @@ interface ImageDecoder {
         [=ImageDecoder/Fatally Reject Bad Data=] algorithm and abort these
         steps.
     8. Otherwise, if {{ImageDecoder/[[encoded data]]}} does not contain enough
-        bytes to decode |encodedFrame| to produce an output who's
+        bytes to decode |encodedFrame| to produce an output whose
         [=Progressive Image Frame Generation=] exceeds |lastFrameGeneration|,
         run the [=ImageDecoder/Reject Infeasible Decode=] algorithm with
         |promise| and abort these steps.
