Replace the term "frame" by the term "object" because audio data are not frames anymore.

--- a/index.src.html
+++ b/index.src.html
@@ -2025,9 +2025,9 @@ The {{AudioData}} {{AudioData/[[resource reference]]}} and {{VideoFrame}}
 [=media resource=].
 
 {{VideoFrame}}.{{VideoFrame/clone()}} and
-{{AudioData}}.{{AudioData/clone()}} return new frame objects whose
+{{AudioData}}.{{AudioData/clone()}} return new objects whose
 `[[resource reference]]` points to the same [=media resource=] as the original
-frame.
+object.
 
 {{VideoFrame}}.{{VideoFrame/close()}} and {{AudioData}}.{{AudioData/close()}}
 will clear their [[resource reference]] slot, releasing the reference their
